tests/ui/borrowck/borrowck-uninit-ref-chain.stderr
error[E0658]: #![feature(partial_init_locals)] might be able to enable the initialisation here
  --> $DIR/borrowck-uninit-ref-chain.rs:18:5
   |
LL |     a.x = 0;
   |     ^^^^^^^
   |
   = help: add `#![feature(partial_init_locals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: #![feature(partial_init_locals)] might be able to enable the initialisation here
  --> $DIR/borrowck-uninit-ref-chain.rs:23:5
   |
LL |     a.x = &&0;
   |     ^^^^^^^^^
   |
   = help: add `#![feature(partial_init_locals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: #![feature(partial_init_locals)] might be able to enable the initialisation here
  --> $DIR/borrowck-uninit-ref-chain.rs:29:5
   |
LL |     a.x = 0;
   |     ^^^^^^^
   |
   = help: add `#![feature(partial_init_locals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: #![feature(partial_init_locals)] might be able to enable the initialisation here
  --> $DIR/borrowck-uninit-ref-chain.rs:34:5
   |
LL |     a.x = &&0;
   |     ^^^^^^^^^
   |
   = help: add `#![feature(partial_init_locals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0381]: used binding `x` isn't initialized
  --> $DIR/borrowck-uninit-ref-chain.rs:8:14
   |
LL |     let x: &&Box<i32>;
   |         - binding declared here but left uninitialized
LL |     let _y = &**x;
   |              ^^^^ `**x` used here but it isn't initialized
   |
help: consider assigning a value
   |
LL |     let x: &&Box<i32> = &&Box::new(42);
   |                       ++++++++++++++++

error[E0381]: used binding `x` isn't initialized
  --> $DIR/borrowck-uninit-ref-chain.rs:11:14
   |
LL |     let x: &&S<i32, i32>;
   |         - binding declared here but left uninitialized
LL |     let _y = &**x;
   |              ^^^^ `**x` used here but it isn't initialized
   |
help: consider assigning a value
   |
LL |     let x: &&S<i32, i32> = &&/* value */;
   |                          +++++++++++++++

error[E0381]: used binding `x` isn't initialized
  --> $DIR/borrowck-uninit-ref-chain.rs:14:14
   |
LL |     let x: &&i32;
   |         - binding declared here but left uninitialized
LL |     let _y = &**x;
   |              ^^^^ `**x` used here but it isn't initialized
   |
help: consider assigning a value
   |
LL |     let x: &&i32 = &&42;
   |                  ++++++

error[E0381]: partially assigned binding `a` isn't fully initialized
  --> $DIR/borrowck-uninit-ref-chain.rs:18:5
   |
LL |     let mut a: S<i32, i32>;
   |         ----- binding declared here but left uninitialized
LL |     a.x = 0;
   |     ^^^^^^^ `a` partially assigned here but it isn't fully initialized
   |
   = help: partial initialization isn't supported, fully initialize the binding with a default value and mutate it, or use `std::mem::MaybeUninit`

error[E0381]: partially assigned binding `a` isn't fully initialized
  --> $DIR/borrowck-uninit-ref-chain.rs:23:5
   |
LL |     let mut a: S<&&i32, &&i32>;
   |         ----- binding declared here but left uninitialized
LL |     a.x = &&0;
   |     ^^^^^^^^^ `a` partially assigned here but it isn't fully initialized
   |
   = help: partial initialization isn't supported, fully initialize the binding with a default value and mutate it, or use `std::mem::MaybeUninit`

error[E0381]: partially assigned binding `a` isn't fully initialized
  --> $DIR/borrowck-uninit-ref-chain.rs:29:5
   |
LL |     let mut a: S<i32, i32>;
   |         ----- binding declared here but left uninitialized
LL |     a.x = 0;
   |     ^^^^^^^ `a` partially assigned here but it isn't fully initialized
   |
   = help: partial initialization isn't supported, fully initialize the binding with a default value and mutate it, or use `std::mem::MaybeUninit`

error[E0381]: partially assigned binding `a` isn't fully initialized
  --> $DIR/borrowck-uninit-ref-chain.rs:34:5
   |
LL |     let mut a: S<&&i32, &&i32>;
   |         ----- binding declared here but left uninitialized
LL |     a.x = &&0;
   |     ^^^^^^^^^ `a` partially assigned here but it isn't fully initialized
   |
   = help: partial initialization isn't supported, fully initialize the binding with a default value and mutate it, or use `std::mem::MaybeUninit`

error: aborting due to 11 previous errors

Some errors have detailed explanations: E0381, E0658.
For more information about an error, try `rustc --explain E0381`.
